adress overflow issue with about sticky

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ header {
 .portfolio-about-container {
 	margin-top: 20px;
 	display: grid;
-	grid-template-columns: 2fr 1fr;
+	grid-template-columns: 3fr 2fr;
 	max-width: 2000px;
 	padding: 20px;
 }
@@ -143,7 +143,7 @@ header img {
 	margin: 20px;
 	padding: 20px;
 	position: sticky;
-	height: 700px;
+	height: 900px;
 	top: 45px;
 }
 
